<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaCare</string>
    <string name="home">InstaCare | Home</string>
    <string name="history">InstaCare | Appointment history</string>
    <string name="detail">InstaCare | Appointment detail</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="name">Patient Name</string>
    <string name="phone">Phone number</string>
    <string name="speciality">Speciality e.g. Dentist, ent or liposuction</string>
    <string name="locality">Locality e.g. Adugodi</string>
    <string name="insta_care">Instant Care</string>
    <string name="schedule_appointment">Schedule Appointment</string>
    <string name="appointment_detail">Appointment Detail</string>
    <string name="patient">Patient</string>
    <string name="phoneno">Contact</string>
    <string name="spec">Speciality</string>
    <string name="local">Locality</string>
    <string name="city">Place</string>
    <string name="time">Time</string>
    <string name="view_history">View History</string>
    <string name="book">Book</string>
    <string name="cancel">Cancel</string>
    
    <string name="error_name">Please fill patient name</string>
    <string name="error_phone">Please fill correct mobile number</string>
    <string name="error_city">Please fill speciality"</string>
    <string name="error_speciality">Please select your city</string>
    <string name="error_locality">Please fill locality</string>
    <string name="error_time">Please select correct time</string>
    <string name="server_error">Oops server not responding, Please try again</string>
    <string name="loading">Loading&#8230;</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="check_internet">Please check your internet connection</string>
    <string-array name="select_city">
        <item>Select Your City</item>
        <item>Delhi</item>
        <item>Mumbai</item>
        <item>Kolkata</item>
        <item>Hyderabad</item>
        <item>Banglore</item>
        <item>Chennai</item>
        <item>Pune</item>
    </string-array>

</resources>
