<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <EditText
            android:id="@+id/pateintname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/pateintmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/pateintname"
            android:layout_below="@id/pateintname"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="text|phone" />

        <AutoCompleteTextView
            android:id="@+id/specilityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pateintmobile"
            android:layout_below="@id/pateintmobile"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/speciality" >
        </AutoCompleteTextView>

        <Spinner
            android:id="@+id/selectCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/specilityTextView"
            android:layout_below="@id/specilityTextView"
            android:layout_marginTop="8dp"
            android:entries="@array/select_city" />

        <AutoCompleteTextView
            android:id="@+id/localityTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/selectCity"
            android:layout_below="@id/selectCity"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/locality" />

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/localityTextView"
            android:layout_below="@id/localityTextView"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="Time" />

        <Button
            android:id="@+id/instnatCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/time"
            android:layout_below="@id/time"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/sky_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/insta_care"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/scheduleAppontment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/time"
            android:layout_below="@id/time"
            android:layout_marginTop="16dp"
            android:layout_toRightOf="@id/instnatCare"
            android:background="@drawable/sky_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/schedule_appointment"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/viewHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/instnatCare"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/sky_blue"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/view_history"
            android:textColor="#ffffff" />
    </RelativeLayout>

</ScrollView>