<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <RelativeLayout
        android:id="@+id/pDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_border"
        android:padding="16dp" >

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D3D3D3"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/appointment_detail"
            android:textSize="28sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/heading"
            android:layout_marginTop="16dp"
            android:background="#D3D3D3"
            android:padding="10dp" >

            <TextView
                android:id="@+id/pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="8dp"
                android:text="@string/patient"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/pname"
                android:layout_toRightOf="@id/pname"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/phoneno"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/name"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@+id/pphone"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/city"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/phone"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/pplace"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pspeciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/place"
                android:layout_marginTop="8dp"
                android:text="@string/spec"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/place"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/pspeciality"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ptime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/speciality"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/time"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/speciality"
                android:layout_margin="8dp"
                android:layout_toRightOf="@id/ptime"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/plocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/time"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/local"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/time"
                android:layout_margin="8dp"
                android:layout_toRightOf="@id/ptime"
                android:gravity="right"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/local"
                android:padding="10dp"
                android:text="@string/book" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/local"
                android:padding="10dp"
                android:text="@string/cancel" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>